# VOX_Personalis

./: .gitignore  .pymarkdown.json  .shellcheckrc  AGENTS.md  DATASET-VERSIONING-STRATEGY.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: conventional-commits.mdc
scripts/: code_quality_check.sh
scripts/baseline_eval/: __init__.py  __main__.py  cli.py  error_analysis.py  inference.py  metrics.py  normalization.py  reporting.py
scripts/data_inventory/: __init__.py  __main__.py  cli.py  integrity.py  metadata.py  reporting.py  sampling.py  transcript.py  vad.py
scripts/dataset_versioning/: __init__.py  __main__.py  cleaning.py  cli.py  hashing.py  reporting.py  splitting.py  temporal.py  validation.py
specs/: README.md  S1-M0-data-inventory.md  S1-M1-dataset-versioning.md  S1-M2-baseline-and-offline-evaluation.md
